# nuevo-fonotarot

./: .gitignore  CLAUDE.md  README.md  app.py  asgi.py  babel.cfg  config.py  editor.html  file.env  lang.md  logo-el-mundo.html  logo-options.html  pyproject.toml  wsgi.py
.github/: copilot-instructions.md
app/: __init__.py  admin.py  extensions.py  models.py
app/blog/: __init__.py  views.py
app/home/: __init__.py  views.py
app/pages/: views.py
app/templates/: base.html  home-full.html  home.html  home1.html  home2.html  home5.html  home6.html  home7.html
dashboard/: sign-in.html  sign-up.html
flask_admin_tabler/: __init__.py  theme.py
migrations/versions/: 223841091ac0_add_users_table.py  2313de320123_add_blog_posts_table.py  260a0a1f4766_add_tienda_tables.py  3fe44943e8c1_payments_extra_data.py  7b79db108ac7_add_template_name_to_static_pages.py  a1b2c3d4e5f6_add_site_settings_and_languages.py  b0c8fb6799b2_add_user_profile_fields_and_payments_.py  b57d52cba819_flask_merchants.py  c3234ec13c39_add_static_pages_table.py  d1e2f3a4b5c6_merge_payment_into_order.py  e1f2a3b4c5d6_add_product_categories_table.py  f4b6cd3e1d22_initial_schema_with_security.py
nuevo_fonotarot/: __init__.py  admin.py  cli.py  decorators.py  extensions.py  flask_app.py  log.py  models.py  placeholder.py  providers.py  utils.py
nuevo_fonotarot/account/: __init__.py  views.py
nuevo_fonotarot/blog/: views.py
nuevo_fonotarot/content/: __init__.py  views.py
nuevo_fonotarot/core/: __init__.py  views.py
nuevo_fonotarot/home/: views.py
nuevo_fonotarot/lab/: __init__.py  (+1 more)
(+83 files in other folders)
