[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nuevo-fonotarot"
version = "0.1.0"
description = "Nuevo Sitio Fonotarot"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.0",
    "flask-limiter>=4.0",
    "flask-admin>=2.0",
    "flask-admin-tabler>=2026.2",
    "flask-babel>=4.0",
    "flask-security>=5.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
]
