[project]
name = "nuevo-fonotarot"
version = "0.1.0"
requires-python = ">=3.14,<4.0"
dependencies = [
    "flask>=3.0",
    "flask-admin-tabler (>=2026.2.2,<2027.0.0)",
    "flask-admin[images,sqlalchemy-with-utils,translation] (>=2.0.2,<3.0.0)",
    "flask-security[babel,common,fsqla] (>=5.7.1,<6.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "flask-limiter (>=4.1.1,<5.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "pyflowcl (>=2025.2.0,<2026.0.0)",
    "khipu-tools (>=2025.1.0,<2026.0.0)",
]

[project.scripts]
start = "nuevo_fonotarot:create_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
